tests/type-errors/05-list-mismatch.flt
// List element type mismatch
// --- Command: dotnet run --project FunLang -- --emit-type --expr "[1, true]" 2>&1
// --- ExitCode: 1
// --- Output:
error[E0301]: Type mismatch: expected int but got bool
 --> <expr>:1:0-9
   = hint: Check that all branches of your expression return the same type
